# libxcrypt-build-test

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: pipeline.yml
